# backend/docs/swagger.json
@@ -56,319 +56,6 @@
                 }
             }
         },
-        "/v1/married-codes": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieve all marriedcodes with pagination",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "MarriedCode"
-                ],
-                "summary": "Get All MarriedCodes",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "example": 10,
-                        "description": "Limit the number of marriedcodes per page (min 1 and max 100)",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "example": 1,
-                        "description": "Page number for pagination (min 1)",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Search term for sam_id and married_code",
-                        "name": "search",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Order for sam_id and married_code",
-                        "name": "order_by",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Sort for asc and desc",
-                        "name": "sort_by",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.MarriedCode"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create marriedcode in the system",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "MarriedCode"
-                ],
-                "summary": "Create MarriedCode",
-                "parameters": [
-                    {
-                        "description": "MarriedCode creation payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.RequestCreateMarriedCode"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.MarriedCode"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/married-codes/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieve details of a specific married code by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "MarriedCode"
-                ],
-                "summary": "Get Married Code Details",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Married Code ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful response with married code details",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid ID",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Married code not found",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Update an existing married code by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "MarriedCode"
-                ],
-                "summary": "Update a Married Code",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Married Code ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Married code update payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.RequestUpdateMarriedCode"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully updated married code",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request body or duplicate married_code",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Married code not found",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Soft delete a married code by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "MarriedCode"
-                ],
-                "summary": "Soft Delete a Married Code",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Married Code ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully soft deleted married code",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid ID",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Married code not found",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/models.CommonResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/user": {
             "post": {
                 "description": "Register a new user in the system",
@@ -611,29 +298,6 @@
                 }
             }
         },
-        "models.MarriedCode": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "$ref": "#/definitions/util.CustomTime"
-                },
-                "deleted_at": {
-                    "$ref": "#/definitions/util.CustomTime"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "married_code": {
-                    "type": "string"
-                },
-                "sam_id": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "$ref": "#/definitions/util.CustomTime"
-                }
-            }
-        },
         "models.RequestAuthLogin": {
             "type": "object",
             "properties": {
@@ -641,17 +305,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.RequestCreateMarriedCode": {
-            "type": "object",
-            "properties": {
-                "married_code": {
-                    "type": "string"
-                },
-                "sam_id": {
                     "type": "string"
                 }
             }
@@ -669,17 +322,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.RequestUpdateMarriedCode": {
-            "type": "object",
-            "properties": {
-                "married_code": {
-                    "type": "string"
-                },
-                "sam_id": {
                     "type": "string"
                 }
             }
@@ -725,14 +367,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "util.CustomTime": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
                     "type": "string"
                 }
             }
